<resources>
    <string name="app_name">My Application</string>
    <string name="Calculator">Калькулятор</string>
    <string name="first_button">Первая кнопка</string>
    <string name="second_button">Вторая кнопка</string>
    <string name="hello_world">Hello World</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="equally">=</string>
    <string name="dot">.</string>
    <string name="div">÷</string>
    <string name="mult">*</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="cancel">C</string>

    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="back">⌫</string>


</resources>