<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:text="@string/Calculator"
        android:gravity="center"
        app:backgroundTint="#4CAF50" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:text="@string/first_button"
        app:backgroundTint="#8BC34A"
        android:gravity="center" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:text="@string/second_button"
        app:backgroundTint="#CDDC39"
        android:gravity="center" />


</LinearLayout>